--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -39,13 +39,18 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarToggle">
             <div class="navbar-nav mr-auto">
-              <a href="/" class="nav-item nav-link">home</a>
-              <a href="/about" class="nav-item nav-link">about</a>
+              <a href="{{url_for('home')}}" class="nav-item nav-link">HOME</a>
+              <a href="{{url_for('about')}}" class="nav-item nav-link">ABOUT</a>
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a href="/login" class="nav-item nav-link">login</a>
-              <a href="/register" class="nav-item nav-link">register</a>
+              {% if current_user.is_authenticated %} 
+              <a href="{{url_for('account')}}" class="nav-item nav-link">ACCOUNT</a>
+              <a href="{{url_for('logout')}}" class="nav-item nav-link">LOGOUT</a>
+              {% else %}
+              <a href="{{url_for('login')}}" class="nav-item nav-link">LOGIN</a>
+              <a href="{{url_for('register')}}" class="nav-item nav-link">REGISTER</a>
+              {% endif %}
             </div>
           </div>
         </div>
