--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -1,11 +1,21 @@
 {% extends "layout.html" %} {% block content %} {% for post in posts %}
 <article class="media content-section">
+  <img
+    class="rounded-circle article-img"
+    src="{{url_for('static',filename='profile_pics/'+post.author.image_file)}}"
+  />
   <div class="media-body">
     <div class="article-metadata">
-      <a href="#" class="mr-2">{{post.author}}</a>
-      <small class="test-muted">{{post.date_posted}}</small>
+      <a href="#" class="mr-2">{{post.author.username}}</a>
+      <small class="test-muted"
+        >{{post.date_posted.strftime('%d-%m-%Y')}}</small
+      >
     </div>
-    <h2><a href="#" class="article-title">{{post.title}}</a></h2>
+    <h2>
+      <a href="{{ url_for('post', post_id=post.id) }}" class="article-title"
+        >{{post.title}}</a
+      >
+    </h2>
     <p class="article-content">{{post.content}}</p>
   </div>
 </article>
