--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -45,8 +45,10 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if current_user.is_authenticated %} 
+              <a href="{{url_for('new_post')}}" class="nav-item nav-link">+ POST</a>
               <a href="{{url_for('account')}}" class="nav-item nav-link">ACCOUNT</a>
               <a href="{{url_for('logout')}}" class="nav-item nav-link">LOGOUT</a>
+
               {% else %}
               <a href="{{url_for('login')}}" class="nav-item nav-link">LOGIN</a>
               <a href="{{url_for('register')}}" class="nav-item nav-link">REGISTER</a>
