--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -60,7 +60,10 @@
 <div class="border-top pt-3">
   <small class="text-muted">
     Already have an account ?
-    <a href="{{url_for('login')}}" class="ml-2" style="padding-bottom: 15px"
+    <a
+      href="{{url_for('users.login')}}"
+      class="ml-2"
+      style="padding-bottom: 15px"
       >Log In</a
     >
   </small>
