--- a/flaskblog/templates/login.html
+++ b/flaskblog/templates/login.html
@@ -37,7 +37,7 @@
     <div class="form-group">
       {{ form.submit(class="btn btn-outline-info")}}
       <small class="text-muted ml-2">
-        <a href="{{ url_for('reset_request') }}">Forgot password ?</a>
+        <a href="{{ url_for('users.reset_request') }}">Forgot password ?</a>
       </small>
     </div>
   </form>
@@ -45,7 +45,10 @@
 <div class="border-top pt-3">
   <small class="text-muted">
     Don't have an account ?
-    <a href="{{url_for('register')}}" class="ml-2" style="padding-bottom: 15px"
+    <a
+      href="{{url_for('users.register')}}"
+      class="ml-2"
+      style="padding-bottom: 15px"
       >Register</a
     >
   </small>
