--- a/flaskblog/templates/account.html
+++ b/flaskblog/templates/account.html
@@ -5,8 +5,16 @@
     <div class="media-body">
       <h2 class="account-heading">{{current_user.username}}</h2>
       <p class="text-secondary">{{current_user.email}}</p>
+      <button
+          class="btn btn-danger btn-sm m-1"
+          data-toggle="modal"
+          data-target="#deleteModal"
+        >
+          Delete Account
+        </button>
     </div>
   </div>
+  
 
   <form method="POST" action=""  enctype="multipart/form-data">
     {{form.hidden_tag()}}
@@ -47,5 +55,42 @@
     </fieldset>
     <div class="form-group">{{ form.submit(class="btn btn-outline-info")}}</div>
   </form>
+</div>
+
+<!-- Modal -->
+<div
+class="modal fade"
+id="deleteModal"
+tabindex="-1"
+role="dialog"
+aria-labelledby="deleteModalLabel"
+aria-hidden="true"
+>
+<div class="modal-dialog" role="document">
+  <div class="modal-content">
+    <div class="modal-header">
+      <h5 class="modal-title" id="deleteModalLabel">Delete Post ?</h5>
+      <button
+        type="button"
+        class="close"
+        data-dismiss="modal"
+        aria-label="Close"
+      >
+        <span aria-hidden="true">&times;</span>
+      </button>
+    </div>
+    <div class="modal-footer">
+      <button type="button" class="btn btn-secondary" data-dismiss="modal">
+        Close
+      </button>
+      <form
+        action="{{url_for('users.delete_user') }}"
+        method="POST"
+      >
+        <input class="btn btn-danger" type="submit" value="Delete" />
+      </form>
+    </div>
+  </div>
+</div>
 </div>
 {% endblock content %}
