--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -50,8 +50,8 @@
           <span>{{error}}</span>
           {% endfor %}
         </div>
-        {% else %} {{form.confirm_password(class="form-control form-control-lg")
-        }} {% endif %}
+        {% else %} {{form.confirm_password(class="form-control
+        form-control-lg")}} {% endif %}
       </div>
     </fieldset>
     <div class="form-group">{{ form.submit(class="btn btn-outline-info")}}</div>
